--- a/trellis/group_vars/development/wordpress_sites.yml
+++ b/trellis/group_vars/development/wordpress_sites.yml
@@ -3,11 +3,11 @@
 # Define accompanying passwords/secrets in group_vars/development/vault.yml
 
 wordpress_sites:
-  jackalope.io:
+  jaronimocall.com:
     site_hosts:
-      - jackalope.dev
+      - jaronimo.dev
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
-    admin_email: admin@jackalope.dev
+    admin_email: admin@jaronimo.dev
     multisite:
       enabled: false
     ssl:
