Added Gravity Form to theme
*Re-installed Gravity Form | Remake Form in backend*

--- a/site/composer.json
+++ b/site/composer.json
@@ -30,6 +30,10 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:masoninthesis/gravityforms.git"
     }
   ],
   "require": {
@@ -39,7 +43,8 @@
     "johnpbloch/wordpress": "4.5",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "roots/soil": "3.7.0"
+    "roots/soil": "3.7.0",
+    "masoninthesis/gravityforms": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
