--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -7,7 +7,7 @@ wordpress_sites:
     site_hosts:
       - 104.131.141.188
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
-    repo: git@github.com:Jaron-C/jackalope.io-v2.git # replace with your Git repo URL
+    repo: git@github.com:Jaron-C/jackalope.io-v2.0 # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
     branch: master
     multisite:
