--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -5,7 +5,7 @@
 wordpress_sites:
   jackalope.io:
     site_hosts:
-      - 104.131.141.188
+      - jaronimocall.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
     repo: git@github.com:Jaron-C/jackalope.io-v2.0.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
