Added gravityformstripe to composer.json

--- a/site/composer.json
+++ b/site/composer.json
@@ -34,6 +34,10 @@
     {
       "type": "vcs",
       "url": "git@github.com:masoninthesis/gravityforms.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:masoninthesis/gravityformsstripe.git"
     }
   ],
   "require": {
@@ -44,7 +48,8 @@
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/soil": "3.7.0",
-    "masoninthesis/gravityforms": "dev-master"
+    "masoninthesis/gravityforms": "dev-master",
+    "masoninthesis/gravityformsstripe": "dev-master"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
